[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = 86.0
margin_right = 31.0
margin_bottom = 106.0
text = "Envoyer"

[node name="Button2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -180.0
margin_right = 53.0
margin_bottom = -160.0
text = "Voir les scores"

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.5
margin_top = -12.0
margin_right = 230.5
margin_bottom = 12.0
align = 1
placeholder_text = "Ton nom"

[node name="LineEdit2" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.5
margin_top = 36.0
margin_right = 230.5
margin_bottom = 60.0
align = 1
placeholder_text = "Ton score"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
